# cafe-menu

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  a.out  cafe_main  cafe_main.cpp  current_menu.txt
.github/workflows/: .build_run_unit_test_cmake.yml.swp  build_run_unit_test_cmake.yml
cafe-menu-core/: CMakeLists.txt
cafe-menu-core/include/: cafe_menu_core.hpp
cafe-menu-core/src/: cafe_menu_core.cpp
cafe-menu-iostream/: CMakeLists.txt
cafe-menu-iostream/include/: cafe_menu_iostream.hpp
cafe-menu-iostream/src/: cafe_menu_iostream.cpp
doc/: Doxyfile
example/: .cafe_menu_main.cpp.swp  CMakeLists.txt  cafe-menu-main.cpp  cafe_menu_example.cpp  cafe_menu_example.hpp  cafe_menu_main.cpp  current_menu.txt  main.cpp
include/: .cafe_menu_core.hpp.swp  cafe_menu_core.hpp
include/cafe-menu/: cafe-menu.hpp  cafe_main.cpp  cafe_main.hpp  cafe_menu.hpp  cafe_menu_core.hpp  cafe_menu_display.hpp  cafe_menu_iostream.hpp
include/cafe-menu-core/: cafe_menu_core.hpp
include/cafe-menu/cafe-menu-core/: cafe_menu_core.hpp
include/cafe-menu/cafe-menu-iostream/: cafe_menu_iostream.hpp
include/cafe_menu/: cafe_menu_core.hpp  cafe_menu_iostream.hpp
src/: .cafe_menu_core.cpp.swp  .cafe_menu_iostream.cpp.swp  cafe-menu-core.cpp  cafe-menu-display.cpp  cafe-menu.cpp  cafe_menu.cpp  cafe_menu_core.cpp  cafe_menu_display.cpp  cafe_menu_iostream.cpp
src/cafe-menu-core/: cafe_menu_core.cpp
src/cafe-menu/cafe-menu-core/: CMakeLists.txt
src/cafe-menu/cafe-menu-iostream/: CMakeLists.txt  cafe_menu_iostream.cpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  cafe_menu_test.cpp
